--- a/mullis_A01.html
+++ b/mullis_A01.html
@@ -62,7 +62,7 @@ break;
 case 'PIZZA':
    		var sliceNum = prompt("How many slices?");
 
-		sliceNum = parseFloat(sliceNum);// base 10
+		sliceNum = parseFloat(sliceNum);// base 10 is implied by float
 
 		if (sliceNum == 1){
 			var type = prompt("Do you want PEPPERONI or VEGGIE or CHEESE topping?").toLowerCase();
